projects/compiler/test/typechecker/enumdecl/error_method_bad_self_position.out
Error at %FILE_NAME%:5:20
Unexpected token 'self', expected 'identifier':
  |    func foo(a: Int, self, b: Int): Int = a + b
                        ^
